fix: update filler text and spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -216,13 +216,12 @@
 }
 
 .l-event-wrapper {
-    position: relative;
     margin-bottom: 30px;
 
     .game-img-wrapper {
         position: absolute;
         bottom: -6px;
-        right: 25px;
+        right: 0;
         padding: 0;
         pointer-events: none;
         user-select: none;
@@ -243,17 +242,18 @@
                 height: 31vw;
             }
         }
-        @media screen and (max-width: 1100px) {
+        @media screen and (max-width: 1150px) {
             display: none;
         }
         @media screen and (max-width: 1000px) {
             display: block;
         }
-        @media screen and (max-width: 500px) {
+        @media screen and (max-width: 650px) {
             display: none;
         }
     }
     .l-event-container {
+        position: relative;
         width: 600px;
         border-radius: 50px;
         background-color: #ffffffda;
@@ -536,7 +536,7 @@
     justify-content: center;
 
     .dark-bg::before {
-        height: 930px;
+        height: 1220px;
     }
 }
 
@@ -544,7 +544,7 @@
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    margin-bottom: 150px;
+    margin-bottom: 130px;
 }
 
 .about-container {
@@ -599,7 +599,7 @@
     .text {
         font-family: 'UsualLight', sans-serif;
         font-size: 0.95rem;
-        line-height: 1.6em;
+        line-height: 2em;
         color: colors.$color-white;
         margin-bottom: 2.5em;
         @media screen and (max-width: 520px) {
